--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -7,7 +7,7 @@
         </p>
 	}
 
-<form id="user-data-form" role="form" action='@br.ufes.scap.controllers.routes.ApplicationController.addUser()' method="post"
+<form id="user-data-form" role="form" action='@br.ufes.scap.controllers.routes.UsersController.addUser()' method="post"
       class="form-horizontal" align="center" autocomplete="off">
 
     <fieldset class="user-fieldset">
@@ -76,7 +76,7 @@
 <br>
 <br>
 
-<form id="user-list-form" role="form" action='@br.ufes.scap.controllers.routes.ApplicationController.index()' method="get"
+<form id="user-list-form" role="form" action='@br.ufes.scap.controllers.routes.UsersController.index()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
                 <button type="submit" class="btn btn-primary ynt-btn-orange">Listar Usuários</button>
