solicitacao preliminar funcionando

--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -54,6 +54,8 @@
 
 		<br>
 
+            <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon2"><b>Tipo  </b></span>
 		<select id=tipo name="tipo" value="">
     			<option value="PROFESSOR">PROFESSOR(A)</option>
     			<option value="SECRETARIO">SECRETARIO(A)</option>
