--- a/app/br/ufes/scap/views/main.scala.html
+++ b/app/br/ufes/scap/views/main.scala.html
@@ -5,7 +5,7 @@
 <html lang="en">
 
 <head>
-    <title>Bem-vindo ao SCAP - Sistema de Controle de Afastamento de Professores </title>
+    <title>SCAP - Sistema de Controle de Afastamento de Professores </title>
 
 
 </head>
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Bem-vindo ao SCAP - Sistema de Controle de Afastamento de Professores </h1>
+                    <h1>SCAP - Sistema de Controle de Afastamento de Professores </h1>
                     @content
                 </div>
             </div>
