mudanças nos menus

--- a/app/br/ufes/scap/views/addSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/addSolicitacao.scala.html
@@ -117,10 +117,10 @@
 <br>
 <br>
 
-<form id="solicitacao-list-form" role="form" action='@br.ufes.scap.controllers.routes.SolicitacoesController.index()' method="get"
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Listar Solicitações</button>
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
             </div>
 </form>
 
