--- a/app/br/ufes/scap/views/erro.scala.html
+++ b/app/br/ufes/scap/views/erro.scala.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>Usuário não autorizado</h1>
-<p>Por favor, efetue seu login.</p>
+<p>Por favor,</p>
+<a href="@br.ufes.scap.controllers.routes.LoginController.login">efetue seu login.</a>
 
 </body>
 </html>
