--- a/app/br/ufes/scap/views/listUsers.scala.html
+++ b/app/br/ufes/scap/views/listUsers.scala.html
@@ -3,6 +3,8 @@
 
 <html>
 
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout">Logout</a>
+
 <head>
 <style>
 table, th, td {
@@ -45,6 +47,14 @@ table, th, td {
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
                 <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Usuário</button>
+            </div>
+</form>
+<br>
+<br>
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
+      class="form-horizontal" align="center" autocomplete="off">
+            <div class="form-actions controls ynt-btn-xlarge">
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
             </div>
 </form>
 
