--- a/app/br/ufes/scap/views/menuUsuario.scala.html
+++ b/app/br/ufes/scap/views/menuUsuario.scala.html
@@ -4,11 +4,10 @@
 <html>
 <body>
 
-<br>
-<br>
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout">Logout</a>
+
 <h1>Menu Principal</h1>
 
-<br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.index">Listar suas Solicitações</a>
 <br>
