--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -78,10 +78,10 @@
 <br>
 <br>
 
-<form id="user-list-form" role="form" action='@br.ufes.scap.controllers.routes.UsersController.index()' method="get"
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Listar Usuários</button>
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
             </div>
 </form>
 
