--- a/app/br/ufes/scap/views/listSolicitacoes.scala.html
+++ b/app/br/ufes/scap/views/listSolicitacoes.scala.html
@@ -45,5 +45,12 @@ table, th, td {
 <br>
 <br>
 
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
+      class="form-horizontal" align="center" autocomplete="off">
+            <div class="form-actions controls ynt-btn-xlarge">
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
+            </div>
+</form>
+
 </html>
 }
