--- a/app/br/ufes/scap/views/menuSecretario.scala.html
+++ b/app/br/ufes/scap/views/menuSecretario.scala.html
@@ -4,15 +4,19 @@
 <html>
 <body>
 
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout">Logout</a>
+
 <h1>Menu Principal</h1>
-<p>My first paragraph.</p>
 
 <br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.index">Listar Usuários</a>
 <br>
+<br>
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.index">Listar Solicitações</a>
 <br>
+<br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.addUser">Adicionar Usuário</a>
+<br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)">Editar seu perfil</a>
 <br>
