--- a/app/br/ufes/scap/views/userLogin.scala.html
+++ b/app/br/ufes/scap/views/userLogin.scala.html
@@ -20,7 +20,7 @@
             <br/>
 
             <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Nome</b></span>
+                <span class="input-group-addon" id="sizing-addon2"><b>Matricula  </b></span>
                 <input type="text" class="form-control" id="matricula" name="matricula" value=""
                        placeholder="Matricula" aria-describedby="sizing-addon1" required>
                 <br>
@@ -29,7 +29,7 @@
 		<br>
 
             <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Senha</b></span>
+                <span class="input-group-addon" id="sizing-addon2"><b>Senha  </b></span>
                 <input type="password" class="form-control" id="password" name="password" value="" placeholder="Senha"
                        aria-describedby="sizing-addon1" required>
                 <br>
