--- a/app/br/ufes/scap/views/listMandatos.scala.html
+++ b/app/br/ufes/scap/views/listMandatos.scala.html
@@ -1,8 +1,61 @@
-@(mandatoForm: Form[br.ufes.scap.models.MandatoFormData],mandatos : Seq[br.ufes.scap.models.Mandato])(implicit request: RequestHeader)
+@(mandatoForm: Form[br.ufes.scap.models.MandatoFormData],mandatos : Seq[br.ufes.scap.models.Mandato], user : Option[br.ufes.scap.models.User])(implicit request: RequestHeader)
 @main() {
 
 <html>
 
+<h1>Mandatos do professor @user.get.nome</h1>
+
+
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+
+<body>
+
+<table style="width:100%">
+
+                <tr>
+                    <th>CARGO</th>
+                    <th>DATA INICIO DO MANDATO</th>
+                    <th>DATA FIM DO MANDATO</th>
+			  <th>EDITAR</th>
+			  <th>DELETAR</th>
+                </tr>
+
+                @for(mandato <- mandatos){
+                <tr>
+                    <td>@mandato.cargo</td>
+                    <td>@mandato.dataIniMandato</td>
+			  <td>@mandato.dataFimMandato</td>
+                    <td><a href="@br.ufes.scap.controllers.routes.MandatosController.editMandato(mandato.id)">editar</a></td>
+                    <td><a href="@br.ufes.scap.controllers.routes.MandatosController.deleteMandato(mandato.id)">deletar</a></td>
+                </tr>
+                }
+</table>
+
+</body>
+
+
+<br>
+<br>
+
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.MandatosController.addMandato()' method="get"
+      class="form-horizontal" align="center" autocomplete="off">
+            <div class="form-actions controls ynt-btn-xlarge">
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Mandato</button>
+            </div>
+</form>
+
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
+      class="form-horizontal" align="center" autocomplete="off">
+            <div class="form-actions controls ynt-btn-xlarge">
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
+            </div>
+</form>
 
 </html>
 }
