--- a/app/br/ufes/scap/views/listParentescos.scala.html
+++ b/app/br/ufes/scap/views/listParentescos.scala.html
@@ -1,4 +1,4 @@
-@(Parentescos : Seq[br.ufes.scap.models.ParentescoFull])(implicit request: RequestHeader)
+@(parentescoForm : Form[br.ufes.scap.models.ParentescoFormData], Parentescos : Seq[br.ufes.scap.models.ParentescoFull])(implicit request: RequestHeader)
 @main() {
 
 <html>
@@ -37,7 +37,7 @@ table, th, td {
 
 <br>
 <br>
-<form id="parentesco-add-form" role="form" action='@br.ufes.scap.controllers.routes.ParentescosController.addParentesco()' method="get"
+<form id="parentesco-add-form" role="form" action='@br.ufes.scap.controllers.routes.ParentescosController.addParentescoPre()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
                 <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Parentesco</button>
