--- a/app/br/ufes/scap/views/menuSecretario.scala.html
+++ b/app/br/ufes/scap/views/menuSecretario.scala.html
@@ -15,11 +15,16 @@
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.index">Listar Solicitações</a>
 <br>
 <br>
+<a href="@br.ufes.scap.controllers.routes.ParentescosController.index">Listar Parentescos</a>
+<br>
+<br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.addUser">Adicionar Usuário</a>
 <br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)">Editar seu perfil</a>
 <br>
+<br>
+
 
 </body>
 </html>
