--- a/app/br/ufes/scap/views/listMandatos.scala.html
+++ b/app/br/ufes/scap/views/listMandatos.scala.html
@@ -43,7 +43,7 @@ table, th, td {
 <br>
 <br>
 
-<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.MandatosController.addMandato()' method="get"
+<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.MandatosController.addMandatoPre()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
                 <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Mandato</button>
