--- a/app/br/ufes/scap/views/menuSecretario.scala.html
+++ b/app/br/ufes/scap/views/menuSecretario.scala.html
@@ -21,6 +21,9 @@
 <a href="@br.ufes.scap.controllers.routes.UsersController.addUser">Adicionar Usuário</a>
 <br>
 <br>
+<a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoPre">Adicionar Mandato</a>
+<br>
+<br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)">Editar seu perfil</a>
 <br>
 <br>
