--- a/app/br/ufes/scap/views/addParecerContra.scala.html
+++ b/app/br/ufes/scap/views/addParecerContra.scala.html
@@ -17,7 +17,7 @@
          </textarea>
          
 <br>
-         <input type = "submit" value = "Registrar">
+         <input onclick="return confirm('Você tem certeza de que deseja se manifestar contra essa solicitação?');" type = "submit" value = "Registrar">
       </form>
 </body>
 
