--- a/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
@@ -40,7 +40,7 @@
 
             <br/>
             <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Encaminhar Solicitação</button>
+                <button type="submit" onclick="return confirm('Você tem certeza de que deseja encaminhar essa solicitação para esse relator(a)?');" class="btn btn-primary ynt-btn-orange">Encaminhar Solicitação</button>
             </div>
 
         </div>
