--- a/app/br/ufes/scap/views/listUsers.scala.html
+++ b/app/br/ufes/scap/views/listUsers.scala.html
@@ -34,7 +34,7 @@ table, th, td {
                     <td>@user.email</td>
 			  <td>@user.tipo</td>
                     <td><a href="@br.ufes.scap.controllers.routes.MandatosController.showMandatosByProfessor(user.id)">ver mandatos</a></td>
-                    <td><a href="@br.ufes.scap.controllers.routes.UsersController.deleteUser(user.id)">deletar</a></td>
+                    <td><a onclick="return confirm('Você tem certeza de que deseja excluir esse professor?');" href="@br.ufes.scap.controllers.routes.UsersController.deleteUser(user.id)">deletar</a></td>
                     <td><a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.id)">editar</a></td>
                 </tr>
                 }
