Registro de documentos adicionado

--- a/app/br/ufes/scap/views/addParecerDocumento.scala.html
+++ b/app/br/ufes/scap/views/addParecerDocumento.scala.html
@@ -8,7 +8,7 @@
 	}
 
 <body>
-      <form action = "@br.ufes.scap.controllers.routes.PareceresController.registrarParecerDocumento(solicitacao.get.id)" align="center"
+      <form action = "@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumento(solicitacao.get.id)" align="center"
 	method = "post">
          <br>
 
