--- a/app/br/ufes/scap/views/verSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/verSolicitacao.scala.html
@@ -25,7 +25,7 @@
 }
 
 @if(userTipo.equals("SECRETARIO") && (solicitacao.status.equals("APROVADA-DI") || solicitacao.status.equals("APROVADA-CT"))){
-<form action="@br.ufes.scap.controllers.routes.PareceresController.registrarParecerDocumentoPre(solicitacao.id)" align="center" method="get">
+<form action="@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumentoPre(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Registrar Parecer">
 </form>
 <br>
@@ -44,19 +44,30 @@
 <form action="@br.ufes.scap.controllers.routes.SolicitacoesController.deleteSolicitacao(solicitacao.id)" align="center" method="get">
   <input type="submit" onclick="return confirm('Você tem certeza de que deseja cancelar essa solicitação?');" value="Deletar">
 </form>
+<br>
+<br>
 }
 
 @if(userTipo.equals("PROFESSOR") && (solicitacao.status.equals("INICIADA") || solicitacao.status.equals("LIBERADA")) ){
 <form action="@br.ufes.scap.controllers.routes.PareceresController.manifestarContraPre(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Manifestar-se Contra">
 </form>
+<br>
+<br>
 }
 
 @if(userTipo.equals("RELATOR") && solicitacao.status.equals("LIBERADA")){
 <form action="@br.ufes.scap.controllers.routes.PareceresController.registrarParecer(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Registrar Parecer">
 </form>
+<br>
+<br>
 }
+
+
+<form action="@br.ufes.scap.controllers.routes.PareceresController.index(solicitacao.id)" align="center" method="get">
+  <input type="submit" value="Ver Pareceres">
+</form>
 
 <br>
 <br>
