--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -11,7 +11,7 @@
 <a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)">Editar seu perfil</a>
 <br>
 <br>
-<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.index">Listar todas as solicitações
+<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes">Listar todas as solicitações
 @if(!(user.get.tipo.equals("SECRETARIO"))){
  abertas</a>
 }
@@ -35,7 +35,7 @@
 <a href="@br.ufes.scap.controllers.routes.UsersController.addUser">Adicionar Usuário</a>
 <br>
 <br>
-<a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoPre">Adicionar Mandato</a>
+<a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoForm">Adicionar Mandato</a>
 <br>
 <br>
 }
