--- a/app/br/ufes/scap/views/verSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/verSolicitacao.scala.html
@@ -25,7 +25,7 @@
 }
 
 @if(userTipo.equals("SECRETARIO") && (solicitacao.status.equals("APROVADA-DI") || solicitacao.status.equals("APROVADA-CT"))){
-<form action="@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumentoPre(solicitacao.id)" align="center" method="get">
+<form action="@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumentoForm(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Registrar Parecer">
 </form>
 <br>
@@ -49,7 +49,7 @@
 }
 
 @if(userTipo.equals("PROFESSOR") && (solicitacao.status.equals("INICIADA") || solicitacao.status.equals("LIBERADA")) ){
-<form action="@br.ufes.scap.controllers.routes.PareceresController.manifestarContraPre(solicitacao.id)" align="center" method="get">
+<form action="@br.ufes.scap.controllers.routes.PareceresController.manifestarContraForm(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Manifestar-se Contra">
 </form>
 <br>
