--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -18,44 +18,33 @@
             </div>
             <br/>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Nome</b></span>
-                <input type="text" class="form-control" id="nome" name="nome" value=""
-                       placeholder="Nome" aria-describedby="sizing-addon1" required>
+                Nome
+                <input type="text" id="nome" name="nome" value="" placeholder="Nome" required>
                 <br>
-            </div>
 
 		<br>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Matricula</b></span>
+                Matricula
                 <input type="text" class="form-control" id="matricula" name="matricula" value="" placeholder="Matricula"
-                       aria-describedby="sizing-addon1" required>
+                       required>
                 <br>
-            </div>
 
 		<br>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>E-mail</b></span>
-                <input type="text" class="form-control" id="email" name="email" value="" placeholder="Email"
-                       aria-describedby="sizing-addon1" required>
-
-            </div>
+                E-mail
+                <input type="text"  id="email" name="email" value="" placeholder="Email"
+                       required>
 
 		<br>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Senha</b></span>
-                <input type="password" class="form-control" id="password" name="password" value="" placeholder="Senha"
-                       aria-describedby="sizing-addon1" required>
+                Senha
+                <input type="password" id="password" name="password" value="" placeholder="Senha"
+                       required>
                 <br>
-            </div>
 
 		<br>
 
-            <div class="input-group input-group-sm">
-            <span class="input-group-addon" id="sizing-addon2"><b>Tipo  </b></span>
+            Tipo
 		<select id=tipo name="tipo" value="">
     			<option value="PROFESSOR">PROFESSOR(A)</option>
     			<option value="SECRETARIO">SECRETARIO(A)</option>
