--- a/app/br/ufes/scap/views/listParentescos.scala.html
+++ b/app/br/ufes/scap/views/listParentescos.scala.html
@@ -41,7 +41,7 @@ table, th, td {
 
 <br>
 <br>
-<form id="parentesco-add-form" role="form" action='@br.ufes.scap.controllers.routes.ParentescosController.addParentescoPre()' method="get"
+<form id="parentesco-add-form" role="form" action='@br.ufes.scap.controllers.routes.ParentescosController.addParentescoForm()' method="get"
       class="form-horizontal" align="center" autocomplete="off">
             <div class="form-actions controls ynt-btn-xlarge">
                 <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Parentesco</button>
