--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -29,13 +29,16 @@
 <a href="@br.ufes.scap.controllers.routes.ParentescosController.index">Listar Parentescos</a>
 <br>
 <br>
-<a href="@br.ufes.scap.controllers.routes.UsersController.index">Listar Usuários</a>
+<a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios">Listar Usuários</a>
 <br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.addUser">Adicionar Usuário</a>
 <br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoForm">Adicionar Mandato</a>
+<br>
+<br>
+<a href="@br.ufes.scap.controllers.routes.ParentescosController.addParentescoForm()">Adicionar Parentesco</a>
 <br>
 <br>
 }
