--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -26,7 +26,7 @@
 <br>
 }
 @if(user.get.tipo.equals("SECRETARIO")){
-<a href="@br.ufes.scap.controllers.routes.ParentescosController.index">Listar Parentescos</a>
+<a href="@br.ufes.scap.controllers.routes.ParentescosController.listarParentescos">Listar Parentescos</a>
 <br>
 <br>
 <a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios">Listar Usuários</a>
